@@ -4,6 +4,8 @@ reprotest (0.7.4) UNRELEASED; urgency=medium
   * Add aslr, domain_host, and num_cpu variations.
   * Add a --print-sudoers feature.
   * Properly drop privs when running the build. (Closes: #877813)
+  * Fix the time variation to actually make the time constant. This drops the
+    time.auto_faketimes variation-spec option.
 
  -- Ximin Luo <infinity0@debian.org>  Fri, 20 Oct 2017 12:33:21 +0200
 
